adding email verification system

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=dev
 HTTP_ADDR=:8080
 
-DATABASE_URL=postgres://postgres:secret@localhost:5432/e-commerce-go?sslmode=disable
+DATABASE_URL=postgres://postgres:hide@localhost:5432/e-commerce-go?sslmode=disable
 
 JWT_ISSUER=ecommerce
 JWT_ACCESS_SECRET=super_access_secret_change_me
@@ -14,6 +14,7 @@ SMTP_PORT=587
 SMTP_USER=ashrafuddinnihan24@gmail.com
 SMTP_PASS=16digitsecret
 SMTP_FROM=E-commerce-go <ashrafuddinnihan24@gmail.com>
+OTP_TTL_MIN=10
 
 APP_BASE_URL=http://localhost:8080
 RESET_PATH=/reset-password   # frontend route
